--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,3 +3,10 @@ version: '1.0-SNAPSHOT'
 main: com.Inf
 api-version: '1.21'
 folia-supported: true
+
+commands:
+  backup:
+    description: "手动备份所有世界"
+    aliases:
+      - backup
+      - bk
