--- a/pom.xml
+++ b/pom.xml
@@ -81,5 +81,11 @@
             <version>1.5.4</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>2.0.47</version>
+        </dependency>
+
     </dependencies>
 </project>
