1.新增指令 /playerdata <save|load|list|reload> [player]，可用来保存玩家信息，读取玩家信息

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -2,3 +2,10 @@
 websocket:
   port: 8887
   enable: true
+# 是否开启玩家可输入保存某些命令权限
+allow-player-command:
+  playerdata:
+    save: true
+    load: false
+    list: false
+    reload: false
